<resources>
    <string name="app_name">AllTasks</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="acitvity_fragments_intents">Aktivnosti, fragmenti i intenti</string>
    <string name="user_interface">grafičko sučelje</string>
    <string name="storing_data">Spremanje podataka</string>
    <string name="title_activity_activity_fragments_intents">ActivityFragmentsIntents</string>
    <string name="title_activity_user_interface">UserInterface</string>
    <string name="title_activity_storing_data">StoringData</string>
    <string name="slanje_podataka">Slanje Podataka</string>
    <string name="edit_text">Unesi Tekst</string>
    <string name="title_activity_slanje_teksta">SlanjeTeksta</string>
    <string name="poslana_poruka">Poslana poruka</string>
    <string name="slanje_na_tri_nacina">Tri Nacina Slanja</string>
    <string name="title_activity_slanje_na_tri_nacina">SlanjeNaTriNacina</string>
    <string name="title_activity_inetnts_browser">InetntsBrowser</string>
    <string name="intents_browser">Intents for Browser</string>
    <string name="go_to_google">Go To Google</string>
    <string name="nazovi">Nazovi</string>
    <string name="show_map">Prikaži Mapu</string>
    <string name="title_activity_fragments">Fragments</string>
    <string name="fragmenti">Fragmenti</string>
    <string name="fragmenti_static">Fragmenti Static</string>
    <string name="title_activity_fragments_static">FragmentsStatic</string>
    <string name="title_activity_fragments_dynamic">FragmentsDynamic</string>
    <string name="fragmenti_dynamic">Fragmenti Dynamic</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1">Ovo je fragment 1</string>
    <string name="fragment2">Ovo je fraagment 2</string>
    <string name="title_activity_fragments_zadatak">FragmentsZadatak</string>
    <string name="prikazi_fragment2">Prikazi fragment2</string>
    <string name="fragmenti_zadatak">Zadatak</string>
    <string name="layouts">Layouts</string>
    <string name="title_activity_layouts">Layouts</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="title_activity_linear_layout">LinearLayout</string>
    <string name="title_activity_frame_layout">FrameLayout</string>
    <string name="title_activity_table_layout">TableLayout</string>
    <string name="title_activity_relative_layout">RelativeLayout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="Comments">Comments</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="cetvtri">Četvrti</string>
    <string name="treci">Treći</string>
    <string name="drugi">Drugi</string>
    <string name="prvi">Prvi</string>
    <string name="peti">Peti</string>
    <string name="sesti">Šesti</string>
    <string name="tekst">Tekst</string>
    <string name="title_activity_anchoring">Anchoring</string>
    <string name="anchoring">Anchoring</string>
    <string name="title_activity_view_elements">ViewElements</string>
    <string name="osnovni_view_elementi">Osnovni View Elementi</string>
    <string name="save">Save</string>
    <string name="slika">SlikA</string>
    <string name="edit_message">Edit Message</string>
    <string name="autosave">Autosave</string>
    <string name="Option1">Option 1</string>
    <string name="Option2">Option 2</string>
    <string name="title_activity_progress_bar">ProgressBar</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="title_activity_view_progress_bar">ViewProgressBar</string>
    <string name="title_activity_date_and_time_picker">DateAndTimePicker</string>
    <string name="date_and_time_picker">Odabir Datuma i Vremena</string>
    <string name="set">I am all set!</string>
    <string name="title_activity_view_list">ViewList</string>
    <string name="title_activity_view_images">ViewImages</string>
    <string name="liste">Liste</string>
    <string name="galerija">Galerija</string>
    <string name="title_activity_options_contex_menu">OptionsContexMenu</string>
    <string name="options_contex_menu">Options/Contex Menu</string>
    <string name="bijela">Bijela</string>
    <string name="crvena">Crvena</string>
    <string name="plava">Plava</string>
    <string name="click_and_hold">Click and hold on it</string>
    <string name="odaberi_jos">Odaberi jos</string>
    <string name="roza">Roza</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_data_files">DataFiles</string>
    <string name="preferences">Preferences</string>
    <string name="data_files">Data Files</string>
    <string name="enter_text">Please enter some text</string>
    <string name="load">Load</string>
    <string name="read_static">Čitaj Statičku</string>
</resources>
