<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="math.hr.alltasks.ActivityFragmentsIntents"
    android:orientation="vertical">

    <EditText
        android:id="@+id/unos_teksta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slanje_podataka"
        android:onClick="slanjePodataka"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slanje_na_tri_nacina"
        android:onClick="showSlanjeNaTriNacina"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intents_browser"
        android:onClick="showIntentsBrowser"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmenti"
        android:onClick="showFragments"/>

</LinearLayout>
