<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="math.hr.alltasks.Fragments"
    android:orientation="vertical">

    <TextView android:text="@string/fragmenti" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmenti_static"
        android:onClick="showFragmentsStatic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmenti_dynamic"
        android:onClick="showFragmentsDynamic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragmenti_zadatak"
        android:onClick="showFragmentsZadatak"/>

</LinearLayout>
